# hpm5300-blinky

./: Cargo.toml  HPMicro.yaml  README.md  memory.x  run-openocd.sh
.cargo/: config.toml
